fix blog styling on mobile

--- a/pages/blogs/Blog.module.scss
+++ b/pages/blogs/Blog.module.scss
@@ -1,12 +1,22 @@
 @import "../global.scss";
 
 .article {
+    line-height: 1.5rem; 
+    word-wrap: break-word;
+
     .blogtitle {
         font-size: 2rem;
         line-height: 1.3;
         font-weight: 800;
         letter-spacing: -0.05rem;
         margin: 1rem 0;
+    }
+
+    code {
+        border-radius: 0.3rem;
+        background-color: #eef2f5;
+        padding: 0.2rem;
+        white-space: wrap;
     }
     
     .lightText {
@@ -19,5 +29,10 @@
         width: 60%;
         margin-left: auto;
         margin-right: auto;
+        line-height: 1.3rem;
+
+        code {
+            padding: 0.3rem;
+        }
     }
 }
